Fixed spacing for logo and heading on large views

--- a/css/main-med.css
+++ b/css/main-med.css
@@ -23,11 +23,17 @@
 }
 
 @media only screen and (min-width: 1024px) {
-    .logo {
+    .logoBar {
         display: block;
         min-width: 100%;
         padding: 1rem .5rem 1rem .5rem;
         background-color: brown;
+        box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.05);
+
+    }
+
+    .logoBar h1 {
+        display: inline;
     }
 
     nav {
