--- a/css/main-sm.css
+++ b/css/main-sm.css
@@ -44,8 +44,9 @@ header {
     justify-content: flex-start;
 }
 
-.logoBar {
-    display: inline;
+.logoBar h1 {
+    display: none;
+    color: aliceblue;
 }
 
 .logo {
@@ -100,13 +101,18 @@ nav ul.open li{
     padding-left: 2rem;
 }
 
+nav li {
+    box-shadow: none;
+}
+
 nav li.active {
     background-color: rgba(0,0,0,0.5);
 }
 
 nav li:hover {
-    transition: background-color 2.5s ease;
+    transition: background-color 2s ease-out;
     background-color: rgba(216, 205, 205, 0.2);
+    box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
 }
 
 nav a {
